# pie

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy-fefe-rollback.yml  deploy-fefe.yml  release.yml
crates/agent/: .gitignore  Cargo.toml  README.md
crates/agent/examples/: debug_jsonl.rs
crates/agent/src/: agent.rs  agent_loop.rs  lib.rs  node.rs  proxy.rs  types.rs
crates/agent/tests/: agent_loop.rs  harness_e2e.rs  permission_e2e.rs  session_storage.rs  skills_loader.rs  templates_loader.rs
crates/ai/: Cargo.toml
crates/ai/examples/: anthropic_hello.rs  count_models.rs  gpt55_hello.rs
crates/ai/src/: api_registry.rs  bedrock_provider.rs  env_api_keys.rs  lib.rs  stream.rs  types.rs
crates/ai/tests/: anthropic_sse_e2e.rs  models_catalog.rs
crates/coding-agent/: Cargo.toml  README.md
crates/coding-agent/src/: agent_session.rs  auth.rs  bug_report.rs  builtin_skills.rs  clipboard_image.rs  commands.rs  config.rs  control_plane_prompt.rs  debug.rs  goal.rs  history.rs  hooks.rs  hub_auth.rs  hub_client.rs  hub_join.rs  images.rs  inbox.rs  local_models.rs  logging.rs  lsp.rs  lsp_supervisor.rs  main.rs  markdown.rs  mcp_loader.rs  mentions.rs  model.rs  oauth.rs  readline.rs  resume_picker.rs  session_archive.rs  skills.rs  skills_state.rs  spinner.rs  templates.rs  trigger_prompt.rs  tui.rs
crates/coding-agent/tests/: bug_report_e2e.rs  cli_help.rs  cli_session.rs  cli_skills.rs  commands.rs  dynamic_trigger_e2e.rs  hooks_e2e.rs  hub_join.rs  hub_join_command.rs  hub_join_flow.rs  lsp_framing.rs  spinner_e2e.rs  task_tool_e2e.rs  tools.rs  tui_render_e2e.rs  web_fetch_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  errors.rs  http.rs  lib.rs  protocol.rs  transport.rs
crates/mcp/tests/: client_fixture.rs  http_fixture.rs
docs/: ds4.md  endpoints.md  hooks.md  loops.md  web-ui-parity.md
docs/issues/: 00-master.md  18-rfc-fefe-mcp-hub.md  19-fefe-client-onboard.md  20-session-export-import.md  21-skill-builder-tool.md  22-web-relay.md  23-loops-inbox.md
docs/rive-code-reading/: README.md
docs/rive-code-reading/chapter-01-expanded/: 01-agent-runtime-overview-expanded.md  (+1 more)
examples/mcp-notify-python/: README.md  mcp.toml  notify-server.py
examples/notification-e2e/: Cargo.toml  README.md
examples/notification-e2e/src/: envelope.rs  lib.rs  redaction.rs
examples/notification-e2e/tests/: smoke.rs
workers/fefe-hub/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+132 files in other folders)
