[workspace]
resolver = "2"
members = [
    "crates/ai",
    "crates/agent",
    "crates/coding-agent",
]

# Default-members for `cargo build --workspace` style invocations — keep the same as members.
default-members = [
    "crates/ai",
    "crates/agent",
    "crates/coding-agent",
]

[workspace.package]
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["earendil-works"]
repository = "https://github.com/earendil-works/pi"
homepage = "https://github.com/earendil-works/pi"

# Shared dependency versions. Crates opt in with `dep.workspace = true`; we keep the existing
# per-crate Cargo.toml entries untouched on purpose (they still work) so the merge is
# zero-friction. Future cleanup can migrate them onto these workspace-level pins.
[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v7", "v4", "serde"] }
parking_lot = "0.12"
once_cell = "1"
regex = "1"
tracing = "0.1"
ignore = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
