[package]
name = "notification-e2e"
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
description = "Phase-1 protocol/demo smoke for the external-notification trigger work (RFC 0 / RFC 1). NOT a full runtime e2e."
license = "MIT"
authors = ["earendil-works"]
publish = false

[[bin]]
name = "mcp-push-smoke"
path = "src/bin/mcp_push_smoke.rs"

[[bin]]
name = "hub-ws-smoke"
path = "src/bin/hub_ws_smoke.rs"

[dependencies]
pie-mcp = { path = "../../crates/mcp" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "io-util", "net"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
